smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-missing-space.smithy
// Parse error at line 5, column 4 near `com`
$version: "2.0"
namespace smithy.example

usecom.foo#Bar
